source = files(
	'argv.cpp',
	'cataloged_map_key_parser.cpp',
	'cmd.cpp',
	'cstring.cpp',
	'datetime.cpp',
	'dword_string.cpp',
	'filesystem.cpp',
	'html.cpp',
	'json.cpp',
	'file_stream.cpp',
	'line_getter.cpp',
	'localization.cpp',
	'math.cpp',
	'memory_stream.cpp',
	'mysql.cpp',
	'path_buffer.cpp',
	'sigsegv_exception.cpp',
	'string.cpp',
	'zip.cpp',
)
