source = files(
	'argv.cpp',
	'assert.cpp',
	'bufferized_filestream.cpp',
	'chunked_db.cpp',
	'config.cpp',
	'countdown.cpp',
	'cstring.cpp',
	'datetime.cpp',
	'filesystem.cpp',
	'filestream.cpp',
	'line_getter.cpp',
	'localization.cpp',
	'main.cpp',
	'math.cpp',
	'memory_buffer.cpp',
	'new_delete_redefine.cpp',
	'path_buffer.cpp',
	'profiler.cpp',
	'random.cpp',
	'trace.cpp',
	'thread.cpp',
	'string.cpp',
	'log.cpp',
)
